--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,2 +1,3 @@
 <h1>Reviews#edit</h1>
 <p>Find me in app/views/reviews/edit.html.erb</p>
+Remember to put in the follow up section here only above the original review!
