--- a/app/views/verification_qrs/show.html.erb
+++ b/app/views/verification_qrs/show.html.erb
@@ -1,6 +1,7 @@
 Todos:
-1:  Generate QR automatically via callback.
-2:  And have it show here.
+Remember this is a user scanning a business QR to prove verification.  What if not registered?  L8R.
+1:  Generate QR automatically via callback.  Done I think.
+2:  And have it show here.  On it.
 3:  Hit controller action for update.
 https://stackoverflow.com/questions/1430247/passing-parameters-in-rails-redirect-to
 4:  Update params to include user_Id
@@ -10,3 +11,14 @@ https://stackoverflow.com/questions/1430247/passing-parameters-in-rails-redirect
 redirect_to controller: 'thing', action: 'edit', id: 3, something: 'else'
 
 redirect_to new_user_path(:id => 1, :contact_id => 3, :name => 'suleman')
+
+
+<section>
+<div>
+
+<%= render_qr_code("https://www.google.com/") %>
+You better hope to god that shit bullshit below works for redirecting and updating the record bro!
+<%#= So render_qr_code(redirect_to controller: "verification_qr', action: 'update', user_id: current_user.id, business_id: verification_qr.business_id) %>
+
+</div>
+</section>
