Verificationqr url experimentation

--- a/app/views/verificationqrs/show.html.erb
+++ b/app/views/verificationqrs/show.html.erb
@@ -12,7 +12,6 @@ redirect_to controller: 'thing', action: 'edit', id: 3, something: 'else'
 
 redirect_to new_user_path(:id => 1, :contact_id => 3, :name => 'suleman')
 
-
 <section>
 <div>
 
@@ -20,6 +19,10 @@ redirect_to new_user_path(:id => 1, :contact_id => 3, :name => 'suleman')
 <%#= You better hope to god that shit bullshit below works for redirecting and updating the record bro! %>
 <%#= render_qr_code(redirect_to controller: "verificationqr", action: 'update', user_id: current_user.id, business_id: @verification_qr.business_id) %>
 <%= render_qr_code(business_verificationqr_path(user_id: current_user.id, business_id: @verificationqr.business_id), method: :patch) %>
+<%= render_qr_code("http://zelaproduct.herokuapp.com/businesses/#{@verificationqr.business.id}/qr_verification?user_id=#{current_user.id}") %>
+
+
+<%= render_qr_code(form_for(@verificationqr, url: business_verificationqr_path(current_user.id, @verificationqr.business_id), method: "patch") do end) %>
 
 </div>
 </section>
