--- a/app/views/verificationqrs/show.html.erb
+++ b/app/views/verificationqrs/show.html.erb
@@ -20,6 +20,8 @@ redirect_to new_user_path(:id => 1, :contact_id => 3, :name => 'suleman')
 <%#= render_qr_code(redirect_to controller: "verificationqr", action: 'update', user_id: current_user.id, business_id: @verification_qr.business_id) %>
 <%= render_qr_code(business_verificationqr_path(user_id: current_user.id, business_id: @verificationqr.business_id), method: :patch) %>
 <%= render_qr_code("http://zelaproduct.herokuapp.com/businesses/#{@verificationqr.business.id}/qr_verification?user_id=#{current_user.id}") %>
+Test this one dog
+<%= render_qr_code("http://zelaproduct.herokuapp.com/businesses/#{@verificationqr.business.id}/qr_verification?verificationqr%5Bbusiness_id%5D=#{@verificationqr.business.id}&verificationqr%5Bid%5D=#{@verificationqr.id}&verificationqr%5Buser_id%5D=#{current_user.id}") %>
 
 
 <%= render_qr_code(form_for(@verificationqr, url: business_verificationqr_path(current_user.id, @verificationqr.business_id), method: :patch) do end) %>
@@ -28,7 +30,9 @@ redirect_to new_user_path(:id => 1, :contact_id => 3, :name => 'suleman')
 <%= link_to('Shit', business_verificationqr_path(:business_id => @verificationqr.business_id, :user_id => current_user.id, :verificationqr_id => @verificationqr.id), method: :patch) %>
 
 This one works!
-<%= link_to "test300", business_verificationqr_path(@verificationqr, verificationqr: {id: @verificationqr.id, user_id: current_user.id, business_id: @verificationqr.business_id}), method: :patch %>
+<%= render_qr_code(link_to "test300", business_verificationqr_path(@verificationqr, verificationqr: {id: @verificationqr.id, user_id: current_user.id, business_id: @verificationqr.business_id}), method: :patch) %>
+<%= render_qr_code(business_verificationqr_path(@verificationqr, verificationqr: {id: @verificationqr.id, user_id: current_user.id, business_id: @verificationqr.business_id}), method: :patch) %>
+/businesses/id/qr_verification?verificationqr%5Bbusiness_id%5D=2&verificationqr%5Bid%5D=2&verificationqr%5Buser_id%5D=2%
 <%#= link_to("Profile", controller: "verificationqr", action: "update", user_id: current_user.id, business_id: @verificationqr.business_id, verificationqr_id: @verificationqr.id) %>
 
 <%#= link_to 'Experiment', business_verificationqr_path(:verificationqr  {@verificationqr.id}), method: :patch %>
