--- a/app/views/verificationqrs/show.html.erb
+++ b/app/views/verificationqrs/show.html.erb
@@ -27,6 +27,9 @@ This one works!
 
 <%= render_qr_code("http://localhost:3000/businesses/#{@verificationqr.business.id}/qr_verification#{params.to_s}") %>
 
+<%= render_qr_code("http://zelaproduct.herokuapp.com/#{@verificationqr.business.id}/qr_verification#{params.to_s}") %>
+Heroku one
+
 
 Let's make this show up after a QR scan and reload!
 <br>
