--- a/app/views/verificationqrs/show.html.erb
+++ b/app/views/verificationqrs/show.html.erb
@@ -7,6 +7,7 @@ https://stackoverflow.com/questions/1430247/passing-parameters-in-rails-redirect
 4:  Update params to include user_Id.  Done.
 5:  Pundit access restricted for business owner only.
 PS:  May have to go with a half-assed temporary MVP solution to save time.
+PPS:  So this is supposed to be for business owner only to show, but how can a normal user access it?  Clear it through params or some hidden shit?  Fuck me.
 
 <section>
 <div>
@@ -28,18 +29,33 @@ This one works!
 <%= render_qr_code("http://localhost:3000/businesses/#{@verificationqr.business.id}/qr_verification#{params.to_s}") %>
 
 <%= render_qr_code("http://zelaproduct.herokuapp.com/#{@verificationqr.business.id}/qr_verification#{params.to_s}") %>
-Heroku one
-
-
-Let's make this show up after a QR scan and reload!
+Heroku one...didn't work.
 <br>
-<% if @url.include?(params.to_s) %>
+
+<%#= render_qr_code("http://localhost:3000/businesses/#{@verificationqr.business.id}/qr_verification?#{something.to_s}") %>
+/validate?pid=#{perk.id}
+
+<%#= render_qr_code(business_verificationqr_path(@verificationqr, params)) %>
+
+<%= link_to "paramstesting", business_verificationqr_path(@verificationqr, current_user.id.to_s) %>
+
+<br>
+
+
+<%= render_qr_code("http://localhost:3000/businesses/#{@verificationqr.business.id}/qr_verification?validate?uid=#{current_user.id}") %>
+<%= link_to "newvalidationpathtesting...works!", business_qr_verification_validation_path(@verificationqr, verificationqr: {id: @verificationqr.id, user_id: current_user.id, business_id: @verificationqr.business_id}) %>
+
+<br>
+Let's make this show up after a QR scan and reload!  But how???  Ask Ray?
+# if(params.has_key?(:one) && params.has_key?(:two))
+<br>
+<% if @url.include?('current_user.id') %>
   <%= link_to "workingtest!", business_verificationqr_path(@verificationqr, verificationqr: {id: @verificationqr.id, user_id: current_user.id, business_id: @verificationqr.business_id}), method: :patch %>
 <% else %>
   <p>Scan the QR code<p>
 <% end %>
 
-
+Add a hidden field in the params that only works when scanned via QR code to activate url?
 <%#= render_qr_code(business_verificationqr_path(user_id: current_user.id, business_id: @verificationqr.business_id), method: :patch) %>
 <%#= render_qr_code(form_for(@verificationqr, url: business_verificationqr_path(current_user.id, @verificationqr.business_id), method: :patch) do end) %>
 <%#= render_qr_code(link_to 'Shit', business_verificationqr_path(current_user.id, @verificationqr.business_id), method: :patch) %>
