--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,83 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+<div class="row align-items-center justify-content-center">
+   <div class="col-sm-8">
+     <div class="">
+      <img src="" alt="" class="img-fluid">
+    </div>
+    <div class="col card p-4 m-4 bg-light ">
+    <div class="row align-items-center justify-content-center">
+      <h1>Register your business for...copy!</h1>
+      <p>Easy and free to sign up!</p>
+    </div>
+
+      <%= simple_form_for [@business, @review] do |f|%>
+      <%= f.input :name, label:  "What's the name of your business?" %>
+      <%= f.input :phone, label: "What's the phone number of your business?" %>
+      <%= f.input :address, id: "business_address", label: "What's the address of the business?  If there's no physical address, please put in the city that's serviced." %>
+      <%= f.input :about, label: "Tell us about the business." %>
+      <%= f.input :founded, label: "What year was your business founded?" %>
+      <%= f.input :website, placeholder: 'www.yourwebsite.com', label: "Full Website URL" %>
+      <%= f.input :instagram, placeholder: 'www.instagram.com/', label: "Instagram Username" %>
+      <%= f.input :facebook, placeholder: 'www.facebook.com/', label: "Facebook Username" %>
+       <%= f.input :pet_friendly, label: "Is your business pet-friendly?" %>
+      <%= f.input :health_safety, collection: Business.health_safety, input_html: {multiple: true, id: "business_health_new", class: "select2"}, label: "What health related precautions is your business taking?" %>
+      <%= f.input :highlights, collection: Business.highlights, input_html: {multiple: true, id: "business_highlights_new", class: "select2"}, label: "What are some highlights of your business?" %>
+      <%= f.input :accessibility, collection: Business.accessibility, input_html: {multiple: true, id: "business_accessibility_new", class: "select2"}, label: "What options does your business provide for the handicapped and disabled??" %>
+      <%= f.input :offerings, collection: Business.offerings, input_html: {multiple: true, id: "business_offerings_new", class: "select2"}, label: "What does your business have to offer?" %>
+      <%= f.input :payments, collection: Business.payments, input_html: {multiple: true, id: "business_payments_new", class: "select2"}, label: "What type of payments does your business accept?" %>
+      <%= f.input :parking, label: "Is there parking available?" %>
+      <%= f.input :influencer_hub, label: "Do social media influencers love this place?" %>
+      <%= f.input :local_favorite, label: "Do the locals love to come here?" %>
+      <%= f.input :restaurant, label: "Is your business a restaurant?" %>
+      <div id="restaurant_details" style="display:none;">
+      <%= f.input :delivery_options, collection: Business.delivery_options, input_html: {multiple: true, id: "business_deliveries_new", class: "select2"}, label: "What delivery options do you have available?" %>
+      <%= f.input :alcohol, label: "Do you offer alcohol to customers?" %>
+      <%= f.input :takeout, label: "Do you offer takeout for customers?" %>
+      <%= f.input :vegan_vegetarian_friendly, label: "Do you have a vegan + vegetarian friendly menu?" %>
+      <%= f.input :gluten_free_friendly, label: "Do you have a gluten free friendly menu?" %>
+      <%= f.input :scenic %>
+      <%= f.input :service_options, collection: Business.service_options, input_html: {multiple: true, id: "business_services_new", class: "select2"}, label: "What service options do you have available?" %>
+      <%= f.input :reservations, label: "Do you offer reservations?" %>
+      </div>
+      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Do you have any photos of the business?" %>
+      <table class="schedule-editor">
+        <thead>
+            <tr>
+            <th>Day</th>
+            <th>Opens at</th>
+            <th>Closes at</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% weekdays.each do |day| %>
+            <%= f.simple_fields_for :schedules, f.object.schedules.find_or_initialize_by(weekday: day[:value]) do |sched| %>
+                <tr>
+                <td>
+                    <%= sched.hidden_field :weekday %>
+                    <div class="checkbox">
+                    <%= sched.check_box :_destroy, {checked: sched.object.persisted?}, "0", "1" %>
+                    <%= sched.label :_destroy, day[:label] %>
+                    </div>
+                </td>
+                <td>
+                    <%= sched.label :opens_at, class: "visually-hidden" %>
+                    <%= sched.time_field :opens_at %>
+                </td>
+                <td>
+                <%= sched.label :closes_at, class: "visually-hidden" %>
+                <%= sched.time_field :closes_at %>
+                </td>
+                </tr>
+            <% end %>
+            <% end %>
+        </tbody>
+        </table>
+      <div style="text-align:center">
+      <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
+      </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+
+
+
