Fixed JS null event listener issue + updated forms + controllers + default bolean extras

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,15 +7,22 @@
     <div class="row align-items-center justify-content-center">
       <h1>Review the!</h1>
       <p>Easy and free to sign up!</p>
+
+    
+
     </div>
       <%= simple_form_for [@business, @review] do |f|%>
-      <%= f.input :title, label:  "What would you like to title your review?" %>
-      <%= f.input :business_rating, collection: (1..5).to_a, label: "Rate your experience" %>
+      <%= f.input :title, label:  "What would you like to name your review?" %>
+      <%= f.input :business_rating, collection: (1..5).to_a, label: "Please rate your overall experience with this business" %>
       <%= f.input :business_review, as: :rich_text_area, label: "Review your experience" %>
       <%= f.input :service, collection: (1..5).to_a, label: "Rate your service" %>
       <%= f.input :value, collection: (1..5).to_a, label: "Rate your value" %>
       <%= f.input :atmosphere, collection: (1..5).to_a, label: "Rate your atmosphere" %>
-      <div id="service_review_form" style="display:none;">
+      <%= f.input :service_review_too, label:  "Would you also like to review the service that you received?" %>
+
+
+      <div id="service_review_part" style="display:none;">
+       <%= f.input :service_id, label: "Which service did you receive?", collection: @business.services %>
       </div>
       <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Do you have any photos of the business?" %>
       <div style="text-align:center">
