--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -19,12 +19,12 @@
       <%= f.input :value, collection: (1..5).to_a, label: "Rate your value" %>
       <%= f.input :atmosphere, collection: (1..5).to_a, label: "Rate your atmosphere" %>
       <%= f.input :service_review_too, label:  "Would you also like to review the service that you received?" %>
-
-
       <div id="service_review_part" style="display:none;">
-       <%= f.input :service_id, label: "Which service did you receive?", collection: @business.services %>
+      <%= f.input :service_id, label: "Which service did you receive?", collection: @business.services %>
+      <%= f.input :service_rating, collection: (1..5).to_a, label: "Rate your service" %>
+      <%= f.input :service_review, as: :rich_text_area, label: "Review your service" %>
       </div>
-      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Do you have any photos of the business?" %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Please attach photos that can prove you interacted with this business" %>
       <div style="text-align:center">
       <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
       </div>
